Bump org.gaul:modernizer-maven-plugin from 3.3.0 to 3.5.0