@@ -114,6 +114,6 @@ public class CombinedSeasonalityDiagnostics implements Diagnostics {
 
     @Override
     public List<String> getWarnings() {
-        return Collections.emptyList();
+        return List.of();
     }
 }
