@@ -47,13 +47,13 @@ class CsvInformationFormatterTest {
     @Test
     public void testFormatEmpty() throws IOException {
         try (var writer = new StringWriter()) {
-            format(writer, Collections.emptyList(), Collections.emptyList(), false);
+            format(writer, List.of(), List.of(), false);
             assertThat(writer.toString())
                     .isEqualToIgnoringNewLines("");
         }
 
         try (var writer = new StringWriter()) {
-            format(writer, Collections.emptyList(), List.of("complex", "string"), false);
+            format(writer, List.of(), List.of("complex", "string"), false);
             assertThat(writer.toString())
                     .isEqualToIgnoringNewLines("");
         }
@@ -137,13 +137,13 @@ class CsvInformationFormatterTest {
     @Test
     public void testFormatResultsEmpty() throws IOException {
         try (var writer = new StringWriter()) {
-            formatResults(writer, Collections.emptyList(), Collections.emptyList(), false, false);
+            formatResults(writer, List.of(), List.of(), false, false);
             assertThat(writer.toString())
                     .isEqualToIgnoringNewLines("\"\"");
         }
 
         try (var writer = new StringWriter()) {
-            formatResults(writer, Collections.emptyList(), List.of("complex", "string"), false, false);
+            formatResults(writer, List.of(), List.of("complex", "string"), false, false);
             assertThat(writer.toString())
                     .isEqualToIgnoringNewLines("\"\"");
         }
