@@ -272,7 +272,7 @@ public class ResidualsDiagnostics implements Diagnostics {
 
     @Override
     public List<String> getWarnings() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     public double getNIIDBound(ProcQuality quality) {
