@@ -261,7 +261,7 @@ public class TsConverter {
 
     //<editor-fold defaultstate="collapsed" desc="Map / MetaData">
     public @NonNull Map<String, String> toMeta(ec.tstoolkit.@Nullable MetaData o) {
-        return o != null ? Collections.unmodifiableMap(o) : Collections.emptyMap();
+        return o != null ? Collections.unmodifiableMap(o) : Map.of();
     }
 
     public ec.tstoolkit.@NonNull MetaData fromMeta(@NonNull Map<String, String> o) {
