@@ -82,7 +82,7 @@ public class TramoSeats {
 
         @Override
         public Map<String, Class> outputDictionary(boolean compact) {
-            return Collections.emptyMap();
+            return Map.of();
         }
 
     }
