@@ -71,7 +71,7 @@ public final class ImportJdbcConnection extends SingleNodeAction<Node> implement
     }
 
     private List<Importable> getImportables() {
-        return Collections.singletonList(new Importable() {
+        return List.of(new Importable() {
 
             @Override
             public String getDomain() {
