@@ -65,7 +65,7 @@ sealed interface TsGridData permits ByTsColumnGridData, ByAnnualFrequencyColumnG
         }
         Ts series = col.get(singleSeriesIndex);
         return series.getData().getAnnualFrequency() == TsUnit.NO_ANNUAL_FREQUENCY
-                ? new ByTsColumnGridData(Collections.singletonList(series))
+                ? new ByTsColumnGridData(List.of(series))
                 : new ByAnnualFrequencyColumnGridData(series, singleSeriesIndex);
     }
 }
