@@ -27,6 +27,7 @@ import org.openide.windows.WindowManager;
 import javax.swing.*;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 import java.util.stream.Stream;
 
@@ -54,7 +55,7 @@ public class Nodes {
     private Iterable<Node> children(@NonNull Node root) {
         return !root.isLeaf()
                 ? Arrays.asList(root.getChildren().getNodes())
-                : Collections.emptyList();
+                : List.of();
     }
 
     @NonNull
