@@ -87,7 +87,7 @@ public class ImportRegArimaSpec extends SingleNodeAction<Node> implements Presen
     }
 
     private List<Importable> getImportables() {
-        return Collections.singletonList(new Importable() {
+        return List.of(new Importable() {
 
             @Override
             public String getDomain() {
